fixed height a verticle spacing for icons on FOoter bar on smaller screen sizes

--- a/src/components/Style/Footer.css
+++ b/src/components/Style/Footer.css
@@ -36,6 +36,12 @@
 }
 
 @media only screen and (max-width: 768px) {
+    .footer-container {
+        height: 6%;
+        border-top-style: none;
+
+    }
+
     .footer-list {
         display: flex;
         margin-left: auto;
@@ -44,7 +50,10 @@
     }
 
     .footer-list > li {
-
+        border-style: none;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 3px;
     }
 
     .iconName {
